syntax = "proto3";

package flyteidl.admin;
option go_package = "github.com/lyft/flyteidl/gen/pb-go/flyteidl/admin";

message ProjectDomainAttributes {
    // Unique project id for which this set of attributes will be applied.
    string project                 = 1;

    // Unique domain id for which this set of attributes will be applied.
    string domain                  = 2;

    // Custom resource attributes which will be applied in cluster resource creation (e.g. quotas).
    // Map keys are the *case-sensitive* names of variables in templatized resource files.
    // Map values should be the custom values which get substituted during resource creation.
    map<string, string> attributes = 3;
}

// Sets custom attributes for a project-domain combination.
message ProjectDomainAttributesUpdateRequest {
    ProjectDomainAttributes attributes = 1;
}

// Purposefully empty, may be populated in the future.
message ProjectDomainAttributesUpdateResponse {
}
